# react-props-replacer

./: Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
examples/: remove.rs
examples/assets/: sample_1.jsx  sample_1.updated.jsx
src/: component.rs  config.rs  lib.rs  main.rs  report.rs
tests/: config_tests.rs  runner_tests.rs
tests/assets/: html_datatestid.jsx  html_datatestid.original_updated.jsx  html_datatestid_spread.jsx  react_datatestid.original_updated.jsx
tests/integration/: mod.rs
